[project]
name = ""
version = ""
description = ""
authors = [
    {name = "yhs0602", email = "jourhyang123@gmail.com"},
]
dependencies = [
    "fog-of-war-chess @ git+https://github.com/yhs0602/fog-of-war-chess",
    "numpy>=1.25.2",
    "joblib>=1.3.2",
    "torch>=2.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

